# if_i_die

./: AI.txt  README.md  mirror.py  pyproject.toml  run_mirror.sh
site/: about.html  index.html
site/2021/05/: index.html
site/2021/06/: index.html
site/2021/08/: index.html
site/2024/12/: index.html
site/2025/10/: index.html
site/2025/11/: index.html
site/2025/12/: index.html
site/archives/1/: index.html  index.html?replyTo=1.html  index.html@replyTo=1.html
site/archives/11/: index.html
site/archives/12/: index.html
site/archives/13/: index.html
site/archives/14/: index.html
site/archives/15/: index.html
site/archives/16/: index.html
site/archives/17/: index.html
site/archives/18/: index.html
site/archives/20/: index.html
site/archives/21/: index.html
site/archives/22/: index.html
site/archives/23/: index.html
site/archives/24/: index.html
site/archives/25/: index.html
site/archives/26/: index.html
site/archives/27/: index.html
site/archives/28/: index.html
site/archives/29/: index.html
site/archives/3/: index.html
site/archives/30/: index.html
site/archives/31/: index.html
site/archives/32/: index.html
site/archives/4/: index.html
site/archives/8/: index.html
site/author/1/: index.html
site/author/1/1/: index.html
site/author/1/2/: index.html
site/category/Linux/: index.html
site/category/Python/: index.html
site/category/Website/: index.html
site/category/default/: index.html
site/page/1/: index.html
site/page/2/: index.html
